ui/src/components/SampleView/SampleView.css
.outsideWrapper{ 
    width:100%; height:auto;  
    margin-right: auto;
    margin-bottom: 0px;
    margin-left: auto; 
}
.insideWrapper{ 
    width:100%; height:100%; 
    position:relative;
}
.coveredImage{ 
    width:100%; height:auto; 
}
.coveringCanvas{ 
    width:100%; height:100%; 
    position:absolute; top:0px; left:0px;
}

#contextMenu{
	position:absolute; 
	top:0px; 
	left:0px;
	display:none;
}

.sample-controlls{
    z-index: 500;
    margin: auto;
    opacity: 1;
    border-radius: 3px;
    background-color: rgba(34, 34, 34, 0.8);
}


#video-message-overlay{
    width: 40%;
    background-color: rgb(34, 34, 34);
    border-radius: 10px;
    position: absolute;
    bottom: 2em;
    right: 2em;
    padding: 1em;
    color: #33BEFF;
    text-align: center;
    animation: fade 2s 2s forwards;
    opacity: 1;
    font-weight: bold;
}

@keyframes fade {
  0% { opacity: 1 }
  100% { opacity: 0 }
}


.sample-controlls li{
    border: 0px !important;
}

.sample-controlls li{
    border: 0px !important;
}

.sample-controlls-bottom{
    margin-top: 10px;
    display: flex;
}

.information-box{
    background-color: white;
    border: 1px solid #AAA;
    border-radius: 3px;
    box-shadow: 0px 2px 3px 0px #AAA;
    min-height: 300px;
    overflow: hidden;
    margin-bottom: 20px;
}

#zoom-control{
    display: inline;
    width: auto;
}

.camera-control{
    height: 42px;
    width: 33.33333333%;
}

.divider{
    margin-bottom: 0px;
}

.canvas-container{
    position:relative;
}

.img{
    position:absolute;
    text-align: left;
}

.button-active{
    color:orange;
}

#zoom-button{
    position: relative;
}

.btn:focus{
    outline: none !important;
}

.btn:active{
    color: grey !important;
}

.task-title-head{
    width: 100%; 
    height: 12px; 
    border-bottom: 1px 
    solid #E5E5E5; 
    text-align: center;
    margin-bottom: 25px;
}

.task-title-body{
    font-size: 16px; 
    background-color: white; 
    padding: 0 10px;
}


.modal-header {
    border-bottom: 1px solid #e5e5e5;
}

.sample-control.active{
    color: orange !important;
    background-color: transparent !important;
}

.sample-control{
    font-size: 2.5em !important;
    border: 0px !important;
    color: #33BEFF !important;
    background-color: transparent !important;
    padding-bottom: 0px !important;
}

.sample-control-small{
    font-size: 1.5em !important;
}

.sample-control-label {
    font-size: 1.1em !important;
    font-weight: bold;
    color: #33BEFF !important;
}


.overlay-box{
    position: absolute;
    margin-top: 10px;
    z-index: 2;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 6px;
    background-color: #ffffff;
}

.overlay-arrow{
  top: -11px;
  border-width: 5px;
  left: 50%;
  position: absolute;
  width: 0; 
  height: 0;
  border-style: solid;
  border-color: transparent transparent rgb(0, 0, 0);
  border-top-color: transparent;
  border-right-color: transparent;
  border-bottom-color: rgb(0, 0, 0);
  border-left-color: transparent;

}

.overlay-head{
    padding: 8px 14px;
    margin: 0;
    font-size: 14px;
    font-weight: normal;
    line-height: 18px;
    background-color: #f7f7f7;
    border-bottom: 1px solid #ebebeb;
    border-radius: 5px 5px 0 0;
}

.overlay-body{
    padding: 5px;
}


.inline{ 
  display: inline;
}
.step-size .popinput-input-label {
    min-width: 0px;
}

.step-size .popinput-input-value  {
    min-width: 0px;
}

.step-size span{
    font-size:11px;
}

.btn-link:hover, .btn-link:focus{
    text-decoration: initial !important;
}

.slider-overlay {
    position: absolute;
    z-index: 1001;
    background-color: rgba(0,0,0,0.5);
    color: rgb(255,255,255);
    border-radius: 4px;
    padding: 0.2em;
}

.sample-video-busy {
    position: absolute;
    z-index: 1000;
    width: 100%;
    height: 100%;
    float: left;
}

.gridform {
    position: absolute;
    z-index: 1001;
    width: 65em;
    float: left;
    padding: 5px 0;
    margin: 2px 0 0;
    background-color: #FFF;
    border: 1px solid rgba(0, 0, 0, .15);
    border-radius: 4px;
}

.selected {
  background-color: #dff0d8 !important;
  color: #000;
  font-weight: bold;
}

